# DeFi-Lending-Platform

./: .gitignore  CHANGELOG.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
api/: .env.example  Dockerfile  README.md  package-lock.json  package.json  vitest.config.ts
bridge/: .env.example  Dockerfile  README.md  package.json  tsconfig.json
docs/: api.md  architecture.md  deployment.md  invariants.md  polyrepo.md  sdk.md  security.md
evm-contracts/: .env.example  README.md  hardhat.config.ts  package.json  tsconfig.json
frontend/: .env.example  Dockerfile  README.md  next.config.js  package.json  tailwind.config.ts
indexer/: .env.example  Dockerfile  (+3 more)
stellar-contracts/: BUILD_ENV_NOTES.md  Cargo.toml  README.md  clippy.toml  rustfmt.toml
stellar-contracts/contracts/collateral_vault/: Cargo.toml
stellar-contracts/contracts/collateral_vault/src/: lib.rs
stellar-contracts/contracts/lending_controller/: Cargo.toml
stellar-contracts/contracts/lending_controller/src/: lib.rs
stellar-contracts/contracts/lending_pool/: Cargo.toml
stellar-contracts/contracts/lending_pool/src/: lib.rs
stellar-contracts/contracts/liquidation/: Cargo.toml
stellar-contracts/contracts/liquidation/src/: lib.rs
stellar-contracts/contracts/oracle/: Cargo.toml
stellar-contracts/contracts/oracle/src/: lib.rs
stellar-contracts/contracts/wrapped_asset/: Cargo.toml
stellar-contracts/contracts/wrapped_asset/src/: lib.rs
stellar-contracts/scripts/: deploy-testnet.sh
(+102 files in other folders)
