[workspace]
resolver = "2"
members = [
    "contracts/wrapped_asset",
    "contracts/oracle",
    "contracts/collateral_vault",
    "contracts/lending_pool",
    "contracts/liquidation",
    "contracts/lending_controller",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/openlend/stellar-contracts"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"
stellar-asset-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = false
strip = "symbols"
lto = true
